# mindustry-mods

./: .gitattributes  .gitignore  .rebel_readline_history  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README.md  build.sh  deploy.sh  index.html  install.sh  mindustry-mods  mindustry-mods.yaml  package-lock.json  package.json  project.clj  requirements.txt  restore.sh
backend/: Cargo.toml  frontend-api.py  mindustry-mods.py  mindustry-mods.yaml  mson.py
backend/scripts/: config.py  main.py  mindustry-mods.py  requirements.txt
backend/scripts/caching/: __init__.py  ghrepo.py  icons.py
backend/src/: color.rs  lib.rs  main.rs  rate.rs  request.rs  version.rs
backend/templates/: base.html  listing.html  preview.html
common/: Cargo.toml  README.md
common/common/: __init__.py  config.py  main.py  requirements.txt
common/common/caching/: __init__.py  ghrepo.py  icons.py
common/scripts/: config.py  minfmt.py  requirements.txt
common/src/: lib.rs
core/: Cargo.toml
core/src/: color.rs  lib.rs  markup.rs
css/: listing.css  main.1.0.css  main.1.1.css  main.1.2.css
data/: mindustry-mods.yaml  modmeta.1.0.json  modmeta.1.1.json  modmeta.1.1.json.auto-bak  modmeta.2.0.json  modmeta.2.0.json.auto-bak  modmeta.3.0.json  modmeta.3.0.json.auto-bak  modmeta.3.1.json  modmeta.3.1.json.auto-bak  modmeta.3.2.json  modmeta.3.2.json.auto-bak
env/prod/cljs/clodustry/: prod.cljs
frontend/: Cargo.toml  Makefile.toml  README.md  deploy.sh  index.html
frontend/css/: header.css  listing.css  main.1.2.css
frontend/data/: modmeta.1.0.json  test.json
frontend/pkg/: package.json  wasm_experiment.d.ts  wasm_experiment.js  wasm_experiment_bg.wasm
frontend/src/: lib.rs
frontend/static/: index.html
frontend/static/css/: main.1.3.css  readme.css
images/: swarm-mod-icon-png
js/: app.js
js/release/: cljsc_opts.edn  inferred_externs.js
js/release/ajax/: core.js  easy.js  formats.js  interceptors.js  json.js  protocols.js  ring.js  simple.js  transit.js  url.js  util.js  xhrio.js  xml_http_request.js
js/release/cljs/: core.js
js/release/cljs/core/: constants.js
js/release/clodustry/: core.js  prod.js
js/release/clojure/: set.js  string.js  walk.js
js/release/cognitect/: transit.js
js/release/reagent/: core.js  debug.js  dom.js  ratom.js
js/release/reagent/impl/: batching.js  component.js  template.js  util.js
m/: 1YoutuberPro2017--mindustry_mod-test.html  2938137849--MindustryMod.html  3x3-and-4x4-walls.html  ARCJ137442--Xuphorium-in-Mindustry.html  AeronGreva--AeroMindustry.html  Alduin4ik--MindCraft.html  AmateurPotion--Chemindustry.html  AmateurPotion--Cindustry.html  AmateurPotion--Hello-world.html  AmateurPotion--Mapi.html  AmateurPotion--Mindustry-Crystal-edition.html  AmateurPotion--basic.html  Andrz1-kiwi--mindustryZ1.html  Anuken--ExampleMod.html  Arches299--THC-Industry.html  Arkanic--DAfDP.html  Arkanic--Subdustry.html  BaseModMaker--Multi-Smelter.html  BaseModMaker--MusicMod.html  BaseModMaker--SuperRepairPoint.html  BasedUser--RevenantMod.html  BasedUser--russian-hud-optimization.html  BlindGhostPL--PlaceAnywhere.html  BlueDaCat--BluetheCat-s-mod.html  BrunoGamerYT3--More-Things.html  BurritoAlpaca--MindustryGreen.html  BurritoAlpaca--MindustryPlus.html  C4sStudio--mindustry_mod.html  Casdl040404--mindustry_mod.html  CodeReactorInc--InterTechMod.html  Cody-Duong--Infidustry.html  ConstantinHrrmn--mindustry.html  Cyberman-42--BronzeAge.html  DDSAO--easyMod.html  DE3000--Manufacry.html  DeltaNedas--NUL.html  DeltaNedas--adblock.html  DeltaNedas--dev-mode.html  DeltaNedas--entity-lib-example.html  DeltaNedas--entity-lib.html  (+266 more)
mcore/: Cargo.toml
mcore/src/: lib.rs  markup.rs
pkg/: mindustry_mods_frontend.d.ts  mindustry_mods_frontend.js  mindustry_mods_frontend_bg.d.ts  mindustry_mods_frontend_bg.wasm  package.json  wasm_experiment.js  wasm_experiment_bg.wasm
public/: data.json  index.html
public/css/: site.css
scripts/: Cargo.toml  README.md  config.py  mindustry-mods.py  requirements.txt
scripts/caching/: __init__.py  ghrepo.py  icons.py
scripts/scripts/: __init__.py  config.py  main.py
scripts/scripts/caching/: __init__.py  ghrepo.py  icons.py
scripts/src/: lib.rs
service/: README.md  mindustry-mods-script.service  mindustry-mods-web.service
src/: Cargo.toml  README.md  mindustry-mods.py  mindustry-mods.yaml  minfmt.py  style.css  template.html
src-py/: mindustry-mods.py
src-rs/: Cargo.toml  Makefile.toml  README.md  index.html
src-rs/backend/: Cargo.toml
src-rs/backend/src/: lib.rs
src-rs/core/: Cargo.toml
src-rs/core/src/: lib.rs
src-rs/frontend/: Cargo.toml  Makefile.toml  README.md
src-rs/frontend/src/: lib.rs
src-rs/src-py/: mindustry-mods.py  requirements.txt
src/clodustry/: core.cljs
src/frontend/: Cargo.toml
src/frontend/src/: lib.rs
src/scripts/: caching.py  git-mods.py  gitops.py  mindustry-mods.py
src/scripts/caching/: __init__.py  ghrepo.py  icons.py
src/templates/: base.html  listing.html  listing.md  preview.html
templates/: base.html  listing.md
