[package]
name = "mindustry-mods-backend"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full", "fs"] }
directories = "2.0"
structopt = "0.3"
base64 = "0.12"

[dependencies.mindustry-mods-core]
path = "../core"