[package]
name = "mindustry-mods-backend"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"
default-run = "main"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
directories = "2.0"
structopt = "0.3"
base64 = "0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
nom = "5.1"
warp = "0.2.5"

[dependencies.serde-hjson]
version = "0.9.1"
default-features = false

[dependencies.mindustry-mods-core]
path = "../core"

[[bin]]
name = "scrap"
path = "src/bin/scrap.rs"
edition = "2018"

[[bin]]
name = "main"
path = "src/bin/main.rs"
