[package]
name = "backend"
version = "0.1.3"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"
default-run = "web"

[dependencies]
common = { path = "../common" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
directories = "2.0"
base64 = "0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
nom = "5.1"
warp = "0.2.5"
sled = "0.34.6"
clap = "3.0.0-beta.2"
bincode = "1.3.1"

[dependencies.serde-hjson]
version = "0.9.1"
default-features = false

[[bin]]
name = "scrap"
path = "src/bin/scrap.rs"
edition = "2018"

[[bin]]
name = "web"
path = "src/bin/web.rs"
edition = "2018"
