[package]
name = "wasm-experiment"
version = "0.1.1"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
seed = "0.5"
serde = "1.0"
futures = "0.1.26"
wee_alloc = "0.4.5"
# stdweb = "0.4.20"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
hifitime = "1.0.8"
js-sys = "0.3.4"
humantime = "1"

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   "Node"
# ]