[package]
name = "mindustry-mods-frontend"
version = "0.1.5"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"

[lib]
crate-type = ["cdylib"]

[dependencies.mindustry-mods-core]
path = "../core"

[dependencies]
wasm-bindgen = "0.2.50"
seed = "0.6"
serde = "1.0"
futures = "0.1.26"
wee_alloc = "0.4.5"
thiserror = "1.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
# hifitime = "1.0.8"
js-sys = "0.3"
humantime = "2"
itertools = "0.8.2"
regex = "1"