[package]
name = "frontend"
version = "0.1.21"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"

[features]
test-mode = []

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common", default-features = false } 

wasm-bindgen = "0.2.68"
seed = "0.6"
serde = "1.0"
futures = "0.1.26"
# woee_alloc = "0.4.5"
thiserror = "1.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
# hifitime = "1.0.8"
js-sys = "0.3"
humantime = "2"
itertools = "0.8.2"
regex = "1"
web-sys = "0.3.37"
lazy_static = "1.4"