[package]
name = "mcore"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"

[lib]
name = "mcore"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "5.1"
thiserror = "1.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]