[package]
name = "scripts"
version = "0.1.2"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"

[dependencies.mcore]
path = "../mcore"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[package.metadata.maturin]
requires-python = ">=3.8"
requires-dist = [
    "Click==7.0",
    "hjson==3.0.1",
    "Markdown==3.1.1",
    "Jinja2==2.10.3",
    "requests==2.20.0",
    "humanize==0.5.1",
    "beautifulsoup4==4.8.1",
    "parsec==3.5",
    "PyGithub==1.44.1",
    "python_dateutil==2.8.1",
    "pretty_errors==1.1.7",
]
classifier = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Rust",
]

[package.metadata.maturin.scripts]
mindustry-mods-script = "scripts:main.cli"
