[package]
name = "mindustry-mods-frontend"
version = "0.1.2"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
seed = "0.5"
serde = "1.0"
futures = "0.1.26"
wee_alloc = "0.4.5"
# stdweb = "0.4.20"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
hifitime = "1.0.8"
js-sys = "0.3.4"
humantime = "1"
itertools = "0.8.2"

[dependencies.mindustry-mods-core]
path = "../core"